[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "astropylibrarian/_version.py"

[tool.black]
line-length = 79
target-version = ["py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["astropylibrarian", "tests"]
skip = ["docs/conf.py"]